# scrts

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs  platform.rs  registry.rs  store.rs
src/commands/: add.rs  copy.rs  delete.rs  list.rs  mod.rs  rename.rs  replace.rs
