[package]
name = "scrts"
version = "0.1.0"
edition = "2024"

[lib]
name = "scrts"
path = "src/lib.rs"

[[bin]]
name = "scrts"
path = "src/main.rs"

[dependencies]
keyring-core = "1"
clap         = { version = "4", features = ["derive"] }
inquire      = "0.9"
anyhow       = "1"
serde_json   = "1"
dirs         = "5"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = "1"
