[package]
name = "scrts"
version = "0.2.2"
edition = "2024"
description = "A minimal CLI to store secrets using your OS native secret storage."
license = "GPL-3.0-only"
repository = "https://github.com/atrtde/scrts"
homepage = "https://github.com/atrtde/scrts"
readme = "README.md"
keywords = ["secrets", "keyring", "password", "cli", "clipboard"]
categories = ["command-line-utilities", "authentication"]

[lib]
name = "scrts"
path = "src/lib.rs"

[[bin]]
name = "scrts"
path = "src/main.rs"

[dependencies]
keyring-core = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
anyhow = "1"
serde_json = "1"
dirs = "6"
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["rt-async-io-crypto-rust"] }
